# ros2_macaroon_demo

./: CMakeLists.txt  README.md  package.xml
include/: cheri_helper.h  listener_node.hpp  resource_authenticator.hpp  resource_base.hpp  resource_owner.hpp  resource_user.hpp  talker_node.hpp
src/: listener_node.cpp  macaroon_demo.cpp  resource_authenticator.cpp  resource_base.cpp  resource_owner.cpp  resource_user.cpp  talker_node.cpp  third_party_demo.cpp  tofu_demo.cpp
