<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>macaroon_demo</name>
  <version>0.7.4</version>
  <description>Minimalist demo of macaroons with ros2</description>
  <maintainer email="md403@cam.ac.uk">Michael Dodson</maintainer>
  <license>Apache License 2.0</license>
  <author>Michael Dodson</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>macaroons</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>macaroons</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
